# eez-framework

./: CMakeLists.txt  LICENSE.txt  README.md  THIRD-PARTY-LICENSES.TXT  idf_component.yml  library.json  library.properties
core/: action.h  alloc.cpp  assets.cpp  assets.h  assets_fix_offsets.cpp  memory.cpp  memory.h  util.cpp  value.cpp  value.h  value_types.h
flow/: components.cpp  dashboard_api.cpp  dashboard_api.h  dashboard_context.cpp  debugger.cpp  debugger.h  expression.cpp  expression.h  flow.cpp  flow.h  flow_defs_v3.h  hooks.cpp  hooks.h  lvgl_api.cpp  lvgl_api.h  operations.cpp  private.cpp  private.h  queue.cpp  queue.h
flow/components/: animate.cpp  call_action.cpp  counter.cpp  delay.cpp  error.cpp  expr_eval.cpp  input.cpp  is_true.cpp  layout_view_widget.cpp  line_chart_widget.cpp  line_chart_widget.h  loop.cpp  lvgl.cpp  lvgl.h  roller_widget.cpp  select_language.cpp  set_variable.cpp  show_keyboard.cpp  show_keypad.cpp  show_message_box.cpp  sort_array.cpp  watch_variable.cpp
gui/: app_context.cpp  app_context.h  assets.cpp  assets.h  assets_fix_offsets.cpp  data.cpp  data.h  font.cpp  gui.cpp  gui.h  hooks.cpp  hooks.h  keypad.cpp  keypad.h  page.cpp  page.h  thread.cpp  touch_calibration.cpp  update.cpp  widget.cpp  widget.h
gui/widgets/: canvas.cpp  line_chart.cpp  progress.cpp  qr_code.cpp  roller.cpp
gui/widgets/containers/: container.cpp  layout_view.cpp  list.cpp  select.cpp
platform/simulator/: cmsis_os2.cpp
src/: eez-framework.h
src/eez/: conf-internal.h
src/eez/core/: action.cpp  action.h  alloc.cpp  alloc.h  assets.cpp  assets.h  debug.cpp  debug.h  eeprom.cpp  eeprom.h  encoder.h  hmi.cpp  hmi.h  keyboard.h  memory.cpp  memory.h  mouse.h  os.cpp  os.h  sound.h  step_values.h  unit.cpp  unit.h  utf8.h  util.cpp  util.h  value.cpp  value.h  value_types.h  vars.h
src/eez/flow/: components.cpp  components.h  date.cpp  (+22 more)
(+162 files in other folders)
